--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,18 @@ repositories {
 	mavenCentral()
 }
 
+tasks.register('copyPrivate', Copy) {
+    from('IoT-Secret') {
+        include '*.yml'
+        include '*.p8'
+    }
+    into 'src/main/resources'
+}
+
+tasks.named('processResources') {
+    dependsOn 'copyPrivate'
+}
+
 dependencies {
     /** Spring Boot starters **/
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
