--- a/DockerFIle
+++ b/DockerFIle
@@ -1,4 +1,39 @@
-FROM eclipse-temurin:17-jdk
-ARG JAR_FILE=build/libs/*.jar
-COPY ${JAR_FILE} app.jar
+# Spring Boot 앱용 Dockerfile
+FROM eclipse-temurin:17-jdk AS build
+
+# 작업 디렉토리 설정
+WORKDIR /app
+
+# Gradle 래퍼 및 설정 파일 복사
+COPY gradlew .
+COPY gradle gradle
+COPY build.gradle .
+COPY settings.gradle .
+
+# Gradle 실행 권한 부여
+RUN chmod +x ./gradlew
+
+# 의존성 다운로드 (캐시 활용)
+COPY gradle/wrapper/gradle-wrapper.jar gradle/wrapper/
+RUN ./gradlew dependencies --no-daemon || true
+
+# 소스 코드 복사
+COPY src src
+COPY Secret Secret
+
+# 애플리케이션 빌드
+RUN ./gradlew build -x test --no-daemon
+
+# 실행 단계
+FROM eclipse-temurin:17-jre-alpine
+
+WORKDIR /app
+
+# 빌드된 JAR 파일 복사
+COPY --from=build /app/build/libs/*.jar app.jar
+
+# 포트 노출
+EXPOSE 8080
+
+# 애플리케이션 실행
 ENTRYPOINT ["java", "-jar", "/app.jar"]
