--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,10 @@ dependencies {
 
     /** Swagger for API documentation **/
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
+
+    /** AWS SDK for S3 **/
+    implementation 'software.amazon.awssdk:s3:2.20.162'
+    implementation 'software.amazon.awssdk:auth:2.20.162'
 }
 
 tasks.named('test') {
