--- a/.github/workflows/deploy-spring-ecr.yml
+++ b/.github/workflows/deploy-spring-ecr.yml
@@ -27,10 +27,14 @@ jobs:
           cache: 'gradle'
 
       - name: Grant execute permission for gradlew
+        working-directory: ./Server
         run: chmod +x gradlew
 
       - name: Run tests
+        working-directory: ./Server
         run: |
+          set -e
+          echo "테스트 실행 중..."
           ./gradlew test --no-daemon || echo "테스트 실패 또는 테스트 없음"
 
       - name: Upload test results
@@ -38,7 +42,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: test-results
-          path: build/test-results/
+          path: Server/build/test-results/
 
   build-and-push:
     name: 빌드 및 배포
@@ -58,19 +62,51 @@ jobs:
 
       - name: Login to Amazon ECR
         id: ecr-login
-        uses: aws-actions/amazon-ecr-login@v1
-        # amazon-ecr-login 액션이 자동으로 Docker 로그인을 설정합니다
-        # 별도의 docker login 명령어가 필요 없습니다
+        run: |
+          set -e
+          echo "ECR 로그인 시작..."
+          # ECR 비밀번호를 가져와서 마스킹 처리
+          ECR_PASSWORD=$(aws ecr get-login-password --region ${{ secrets.AWS_REGION }})
+          if [ -z "$ECR_PASSWORD" ]; then
+            echo "❌ ECR 비밀번호를 가져오는데 실패했습니다."
+            exit 1
+          fi
+          echo "::add-mask::$ECR_PASSWORD"
+          # ECR 레지스트리 URI 추출 (예: 123456789012.dkr.ecr.ap-northeast-2.amazonaws.com)
+          ECR_REGISTRY=$(echo ${{ env.ECR_REPOSITORY }} | cut -d'/' -f1)
+          echo "ECR 레지스트리: $ECR_REGISTRY"
+          echo "$ECR_PASSWORD" | docker login --username AWS --password-stdin $ECR_REGISTRY
+          if [ $? -eq 0 ]; then
+            echo "✅ ECR 로그인 성공"
+          else
+            echo "❌ ECR 로그인 실패"
+            exit 1
+          fi
+          unset ECR_PASSWORD
 
       - name: Build Docker image (Spring)
+        working-directory: ./Server
         run: |
+          set -e
+          echo "Docker 이미지 빌드 시작..."
+          echo "ECR 레포지토리: ${{ env.ECR_REPOSITORY }}"
+          echo "이미지 태그: ${{ env.IMAGE_TAG }}"
+          if [ ! -f "DockerFIle" ]; then
+            echo "❌ DockerFIle을 찾을 수 없습니다. 현재 디렉토리: $(pwd)"
+            ls -la
+            exit 1
+          fi
           docker build -f DockerFIle -t ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} .
           docker tag ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} ${{ env.ECR_REPOSITORY }}:latest
+          echo "✅ Docker 이미지 빌드 완료"
 
       - name: Push Docker image to ECR
         run: |
+          set -e
+          echo "ECR에 이미지 푸시 시작..."
           docker push ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
           docker push ${{ env.ECR_REPOSITORY }}:latest
+          echo "✅ 이미지 푸시 완료"
 
       - name: Deploy to EC2 via SSH
         uses: appleboy/ssh-action@v0.1.7
